# ai-news-digest

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.test.yaml  pyproject.toml
news_digest/: __init__.py  __main__.py  cli.py  config.py  feeds.py  llm.py  onboarding.py  publisher.py
